--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
 
 <body>
     <header>
-        <div class="collapse bg-dark" id="navbarHeader">
+        <div class="collapse bg-orange" id="navbarHeader">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-md-7 py-4">
                         <h4 class="text-white">Peça Seu Lanche</h4>
-                        <p class="text-muted">Gosta de pedir lanches pelo WhatsApp? Pois fazer isto nunca foi tão
+                        <p class="text-light">Gosta de pedir lanches pelo WhatsApp? Pois fazer isto nunca foi tão
                             fácil.
                         </p>
                     </div>
                     <div class="col-sm-4 offset-md-1 py-4">
                         <h4 class="text-white">Contato</h4>
                         <ul class="list-unstyled">
-                            <li><a href="#" class="text-white">Twitter</a></li>
-                            <li><a href="#" class="text-white">Facebook</a></li>
-                            <li><a href="#" class="text-white">Email</a></li>
+                            <li><a href="https://twitter.com/slivadrip" target="_blank" class="text-white">Twitter</a></li>
+                            <li><a href="https://www.facebook.com/slivadrip" target="_blank" class="text-white">Facebook</a></li>
+                            <li><a href="mailt:slivadrip@gmail.com"  target="_blank" class="text-white">Email</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="navbar navbar-dark bg-dark box-shadow">
+        <div class="navbar navbar-dark bg-orange box-shadow">
             <div class="container d-flex justify-content-between">
                 <a href="#" class="navbar-brand d-flex align-items-center">
                     <img src="http://www.icons101.com/icon_ico/id_13859/burger.ico">
@@ -108,11 +108,13 @@
         <br>
     </div>
 </main>
-<footer class="text-center bg-dark text-light"">
+<footer class="text-center bg-orange text-light"">
 
     <hr />
+    
        <br>
-    Lanche pelo WhatsApp - <a href="mailto:slivadrip@gmail.com" class="text-light">Email</a> | <a href="https://github.com/slivadrip">GitHub</a>
+                       <img src="http://www.icons101.com/icon_ico/id_13859/burger.ico">
+ Lanche pelo WhatsApp - <a href="mailto:slivadrip@gmail.com" class="text-light">Email</a> | <a href="https://github.com/slivadrip">GitHub</a>
     | <a href="https://facebook.com/slivadrip">Facebook</a>
     <br>
     <br>
